Fixed jumping links.

--- a/src/sass/partials/_header.scss
+++ b/src/sass/partials/_header.scss
@@ -84,6 +84,7 @@ header {
                     width: 90%;
                     &:hover {
                         border-bottom: 4px solid white;
+                        margin-bottom: -4px;
                     }
                 }
                 &:hover {
